--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm run dev --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "docs": "jsdoc -c frontend/jsdoc.conf.json"
   },
   "keywords": [
     "to do list",
@@ -27,7 +28,10 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "better-docs": "^2.7.2",
     "concurrently": "^8.2.2",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "jsdoc": "^4.0.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0"
   }
